# hqcr

./: .gitignore  CLAUDE.md  Cargo.toml  KAT.md  README.md  c_benchmark.txt  hqc_notes.md
benches/: bench.rs
c_implementations/: main_speed.c
c_implementations/optimized-hqc-1/: Makefile
c_implementations/optimized-hqc-3/: Makefile
c_implementations/optimized-hqc-5/: Makefile
c_implementations/reference-hqc-1/: Makefile
c_implementations/reference-hqc-3/: Makefile
c_implementations/reference-hqc-5/: Makefile
docs/: FO.md  HQC.md  SECURITY-AUDIT.md  c-vs-rust-bench.md
docs/audit/: asm+miri_results.txt  constant-time.md  zeroize.md
examples/: kem_usage.rs  sampler_distribution.rs
src/: gf.rs  hash.rs  kem.rs  lib.rs  params.rs  parsing.rs  pke.rs
src/codes/: mod.rs  reed_muller.rs  reed_solomon.rs
src/poly/: mod.rs  mul.rs  sampling.rs
tests/: ct_timing.rs  intermediate.rs  kat.rs
tests/hqc-1/: PQCkemKAT_2321.our.rsp
tests/hqc-3/: PQCkemKAT_4602.our.rsp
