[package]
name = "hqc"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Pure-Rust implementation of HQC (Hamming Quasi-Cyclic) post-quantum KEM"

[dependencies]
sha3     = "0.10"
subtle   = "2.5"
zeroize  = { version = "1.7", features = ["derive"] }
rand_core = "0.6"

[dev-dependencies]
criterion = "0.5"
hex       = "0.4"
aes       = "0.8"        # NIST AES-256-CTR DRBG for KAT seed expansion (test-only)
sha3      = "0.10"       # raw SHAKE256 reads in the intermediate-values harness (test-only)

[features]
# Enables the KAT generation/verification harness in tests/kat.rs.
# Run with: cargo test --features kat --test kat -- --nocapture
kat = []

[[bench]]
name = "bench"
harness = false
