[package]
name = "hqcr"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Pure-Rust implementation of HQC (Hamming Quasi-Cyclic) post-quantum KEM"
repository = "https://github.com/damesca/hqcr"
readme = "README.md"
keywords = ["post-quantum", "cryptography", "kem", "hqc", "pqc"]
categories = ["cryptography", "algorithms"]
exclude = [
    "tests/hqc-1/**",
    "tests/hqc-3/**",
    "tests/hqc-5/**",
    "hqc_notes.md",
]

[dependencies]
sha3     = "0.10"
subtle   = "2.5"
zeroize  = { version = "1.7", features = ["derive"] }
rand_core = "0.6"

[dev-dependencies]
criterion = "0.5"
hex       = "0.4"
sha3      = "0.10"       # SHAKE256 KAT PRNG + raw reads in the intermediate-values harness (test-only)
rand_core = { version = "0.6", features = ["getrandom"] }  # OsRng for examples

[features]
# Enables the KAT generation/verification harness in tests/kat.rs.
# Run with: cargo test --features kat --test kat -- --nocapture
kat = []

# Enables the constant-time leakage harness in tests/ct_timing.rs (audit Layer 2).
# Run with: cargo test --release --features ct-audit --test ct_timing -- --nocapture
ct-audit = []

[[bench]]
name = "bench"
harness = false
